agregando curso de kubernettes

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
          <li> Docker </li>
          <li> Ansible </li>
          <li> Integración continua: Madurez y Productividad en el Desarrollo de Software</li>
-         <li> Kubernetes </li>
+         <li>Kubernettes</li>
      </ul>
 </body>
 </html>
