--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
      <ul>
          <li> Vagrant: Gerenciando maquinas virtuales </li>
          <li> Docker: Creando containers sin dolor de cabeza </li>
-         <li> Ansible: Infraestructura como codigo </li>
+         <li> Ansible </li>
          <li> Integración continua: Madurez y Productividad en el Desarrollo de Software</li>
          <li>Kubernettes</li>
      </ul>
